--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.1.1
+Date: 06.09.2020
+  Minor features:
+    - Incompatible with Random Factorio Things
+---------------------------------------------------------------------------------------------------
 Version: 0.1.0
 Date: 06.09.2020
   Major Features:
