Changelog for productivity modules

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,12 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.1.2
+Date: 24.11.2020
+  Balancing:
+    - Productivity modules:
+      Level 4 speed bonus: -15% -> -20%
+      Level 5 speed bonus: -15% -> -25%
+      Level 6 speed bonus: -15% -> -30%
+---------------------------------------------------------------------------------------------------
 Version: 0.1.1
 Date: 06.09.2020
   Minor features:
