--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.1.3
+Date: 2021-12-07
+  Fixes:
+    - Fixed module tier not increasing after tier 4
+---------------------------------------------------------------------------------------------------
 Version: 0.1.2
 Date: 24.11.2020
   Balancing:
